<resources>
    <string name="app_name">InStudy</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- Nav Drawer Menu Items -->
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="Groups">Groups</string>
    <string name="Search">Search</string>
    <string name="User_Type">Cartoon Wars</string>
    <string name="Actions">Simpsorama</string>
    <string name="header">InStudy</string>
    <!-- Group chat Items -->
    <string name="message_hint">Say anything</string>
    <string name="save">Save</string>
    <string name="profile_me">My Profile Pic</string>
    <string name="profile_other">Other profile pic</string>

    <string name="dvAddNewCourse">Add new course</string>
    <string name="dvMyProfile">My profile</string>
    <string name="dvCoursesTeacher">Courses as a teacher</string>
    <string name="dvCoursesStudent">Courses as a student</string>
    <string name="dvNotifications">My notifications</string>
    <string name="dvFriends">Friends</string>
    <string name="dvMessages">Messages</string>
    <string name="dvSettings">Settings</string>

    <string name="dvLogOut">Log out</string>
    <string name="your_message">Your message?</string>
    <string name="john_doe">John Doe</string>
    <string name="your_name">Your Name</string>
    <string name="about_you">Tag Line:</string>
    <string name="checkschedule">CheckSchedule</string>
    <string name="share_notes">Enter notes to share: </string>
    <string name="from">From: UC San Diego</string>
    <string name="proPic">Snap</string>
    <string name="on">On</string>
    <string name="studentgroups">StudentGroups:</string>
    <string name="teacher_groups">Teacher Groups:</string>

    <string name="permission_write_storage">Write to SD?</string>
    <string name="button_allow">Yes</string>
    <string name="button_deny">No</string>
    <string name="location">Location</string>
    <string name="name">Name</string>
    <string name="notice">Notice</string>
    <string name="tag_line">Tag Line</string>
    <string name="timeline">TimeLine</string>
    <string name="_04_april_2017_campus_a_274_aud">04 April 2017 * Campus A * 274 Aud.</string>
    <string name="applied_machine_learning_in_python">Applied Machine Learning in Python</string>
    <string name="apply">Apply</string>
    <string name="maria_podlesnova">Maria Podlesnova</string>
    <string name="overview">overview</string>
    <string name="this_is_simple_text_bla_bla_lba">this is simple text bla bla lba</string>


</resources>
