<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <group android:checkableBehavior="single"
        android:id="@+id/dgMain">
        <item
            android:id="@+id/dvAddNewCourse"
            android:icon="@drawable/add_folder"
            android:title="@string/dvAddNewCourse" />
        <item
            android:id="@+id/dvMyProfile"
            android:icon="@drawable/user"
            android:title="@string/dvMyProfile" />

        <item
            android:id="@+id/dvNotifications"
            android:icon="@drawable/notification"
            android:title="@string/dvNotifications" />
        <item
            android:id="@+id/dvFriends"
            android:icon="@drawable/meeting_with_a_friend"
            android:title="@string/dvFriends" />
       <!-- <item
            android:id="@+id/dvMessages"
            android:icon="@drawable/mail"
            android:title="@string/dvMessages" />-->
        <item
            android:id="@+id/dvSettings"
            android:icon="@drawable/settings"
            android:title="@string/dvSettings" />

     <!--   <item
            android:id="@+id/dvTest"
            android:icon="@drawable/settings"
            android:title="Test" />-->
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/dgLogout">
        <item
            android:id="@+id/dvLogOut"
            android:icon="@drawable/logout"
            android:title="@string/dvLogOut" />
    </group>

</menu>