<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:elevation="1dp"
    android:orientation="vertical"
    tools:ignore="UnusedAttribute">

    <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardCornerRadius="2dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:weightSum="7"
            tools:ignore="DisableBaselineAlignment">

            <RelativeLayout
                android:id="@+id/rlLeftCol"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5">

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/applied_machine_learning_in_python"
                    android:textColor="@color/text_accent"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvSubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/tvTitle"
                    android:layout_below="@+id/tvTitle"
                    android:text="@string/_04_april_2017_campus_a_274_aud"
                    android:textColor="@color/text_accent"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />

                <LinearLayout
                    android:id="@+id/llFriendListStu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvSubTitle"
                    android:layout_marginTop="10dp"
                    android:minHeight="75dp"
                    android:orientation="vertical">

                    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:ignore="UselessParent">

                        <TextView
                            android:id="@+id/tvMessageStu"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:text="@string/this_is_simple_text_bla_bla_lba"
                            android:textColor="@color/text_accent"
                            android:textSize="10sp"
                            tools:ignore="SmallSp" />


                        <LinearLayout
                            android:id="@+id/llUsersStu"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/tvMessageStu"
                            android:orientation="horizontal">


                            <ImageView
                                android:id="@+id/ivPerson1Stu"
                                android:layout_width="36dp"
                                android:layout_height="36dp"
                                android:layout_margin="2dp"
                                android:contentDescription=""
                                android:src="@drawable/teststu"
                                tools:ignore="ContentDescription" />

                            <ImageView
                                android:id="@+id/ivPerson2Stu"
                                android:layout_width="36dp"
                                android:layout_height="36dp"
                                android:layout_margin="2dp"
                                android:src="@drawable/teststu"
                                tools:ignore="ContentDescription" />

                            <ImageView
                                android:id="@+id/ivPerson3Stu"
                                android:layout_width="36dp"
                                android:layout_height="36dp"
                                android:layout_margin="2dp"
                                android:src="@drawable/teststu"
                                tools:ignore="ContentDescription" />

                            <ImageView
                                android:id="@+id/ivPerson4Stu"
                                android:layout_width="36dp"
                                android:layout_height="36dp"
                                android:layout_margin="2dp"
                                android:src="@drawable/teststu"
                                tools:ignore="ContentDescription" />

                            <ImageView
                                android:id="@+id/ivPerson5Stu"
                                android:layout_width="36dp"
                                android:layout_height="36dp"
                                android:layout_margin="2dp"
                                android:src="@drawable/teststu"
                                tools:ignore="ContentDescription" />

                            <ImageView
                                android:id="@+id/ivMoreStu"
                                android:layout_width="36dp"
                                android:layout_height="36dp"
                                android:layout_margin="2dp"
                                android:src="@drawable/more"
                                tools:ignore="ContentDescription" />
                        </LinearLayout>

                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/llFriendListStu"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <Button
                            android:id="@+id/btnOverviewStu"
                            android:layout_width="100dp"
                            android:layout_height="20dp"
                            android:layout_centerHorizontal="true"
                            android:background="@drawable/action_button_round"
                            android:text="@string/overview"
                            android:textColor="@color/login_active"
                            android:textSize="8sp"
                            tools:ignore="SmallSp" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <Button
                            android:id="@+id/btnApplyStu"
                            android:layout_width="100dp"
                            android:layout_height="20dp"
                            android:layout_centerHorizontal="true"
                            android:background="@drawable/action_button_round"
                            android:text="@string/apply"
                            android:textColor="@color/login_active"
                            android:textSize="8sp"
                            tools:ignore="SmallSp" />
                    </RelativeLayout>
                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2">

                <ImageView
                    android:id="@+id/ivTeacherStu"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/teststu"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/tvTeacherNameStu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ivTeacherStu"
                    android:layout_centerHorizontal="true"
                    android:text="@string/maria_podlesnova"
                    android:textColor="@color/text_not_accent"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />


                <LinearLayout
                    android:id="@+id/ll1Stu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/tvTL"
                    android:layout_marginTop="10dp"
                    android:background="@color/cardview_light_background"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:visibility="visible">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3.20"
                        android:background="@color/cardview_light_background"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txtTimerDayStu"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="00"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textColor="#000"
                            android:textSize="8sp" />

                        <TextView
                            android:id="@+id/txt_TimerDay"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="3dp"
                            android:layout_weight="1.33"
                            android:gravity="center_horizontal"
                            android:text="d"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textColor="#000"
                            android:textSize="8sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1.71"
                        android:background="@color/cardview_light_background"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txtTimerHourStu"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:gravity="center"
                            android:text="00"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textColor="#000"
                            android:textSize="8sp" />

                        <TextView
                            android:id="@+id/txt_TimerHour"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="3dp"
                            android:gravity="center_horizontal"
                            android:text="h"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textColor="#000"
                            android:textSize="8sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:background="@color/cardview_light_background"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txtTimerMinuteStu"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:gravity="center"
                            android:text="00"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textColor="#000"
                            android:textSize="8sp" />

                        <TextView
                            android:id="@+id/txt_TimerMinute"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="3dp"
                            android:layout_weight="1"
                            android:gravity="center_horizontal"
                            android:text="m"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textColor="#000"
                            android:textSize="8sp" />
                    </LinearLayout>


                </LinearLayout>

                <TextView
                    android:id="@+id/tvTL"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/tvTeacherNameStu"
                    android:layout_below="@+id/tvTeacherNameStu"
                    android:layout_marginTop="12dp"
                    android:text="Time Left:"
                    android:textColor="#000"
                    android:textSize="10sp" />

                <Button
                    android:id="@+id/btSubmitStu"
                    android:layout_width="100dp"
                    android:layout_height="20dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/action_button_round"
                    android:text="Submit"
                    android:textColor="@color/login_active"
                    android:textSize="8sp"
                    tools:ignore="SmallSp" />

            </RelativeLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>